name:                PingStat
version:             0.1.0.0
synopsis:            Watch pings for a while and represent them in simple numeric form.
description:         Please see README.md
homepage:            https://github.com/kindaro/PingStat#readme
license:             BSD3
license-file:        LICENSE
author:              Ignat Insarov
maintainer:          kindaro@gmail.com
copyright:           2016 Ignat Insarov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Grammar.Ping
  build-depends:       base >= 4.7 && < 5, array
  default-language:    Haskell2010
  build-tools: alex

executable PingStat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PingStat
                     , process
                     , mtl
  default-language:    Haskell2010

test-suite PingStat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , PingStat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kindaro/PingStat
